change index.html with pics

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>                                                             
+<div>
 Welcome!
+</div>
+<div>
+<img src="./pics/nature.song-withwhitemask.jpg"/>
+</div>
+<div>
+<img src="./pics/nature.song-washington.jpg"/>
+</div>
 <div
   class="fb-like"
   data-share="true"
