--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ Welcome!
   data-show-faces="true">
 </div>
 <div>
-<img src="./pics/nature.song-withwhitemask.jpg"/>
+<img src="./pics/nature.song-withwhitemask.jpg" height=100, width=100 />
 </div>
 <div>
-<img src="./pics/nature.song-washington.jpg"/>
+<img src="./pics/nature.song-washington.jpg" height=100, width=100 />
 </div>
 </body>
 
