--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </title>
 </head>
 <body>
-<iframe src="KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.pdf" frameborder="0"></iframe>
-<iframe src="KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.pdf" frameborder="0"></iframe>
+<iframe width=800 height=680 src="KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.pdf" frameborder="0"></iframe>
+<iframe width=800 height=680 src="KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.pdf" frameborder="0"></iframe><br/>
 </body>
 </html>
