--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.pdf" frameborder="0"></iframe>
 <iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.pdf" frameborder="0"></iframe><br/>
-<img src='./cert/CMM-L3.jpg'><br/>
-<img src='./cert/CMMi-L3.jpg'><br/>
+<img width=800 src='./cert/CMM-L3.jpg'><br/>
+<img width=800 src='./cert/CMMi-L3.jpg'><br/>
 </body>
 </html>
