--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
 </title>
 </head>
 <body>
+
 <iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.pdf" frameborder="0"></iframe>
 <iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.pdf" frameborder="0"></iframe><br/>
+
 <img width=800 src='./cert/CMM-L3.jpg'><br/>
 <img width=800 src='./cert/CMMi-L3.jpg'><br/>
+
+<img width=800 src='./cert/sol2man2WithAlbertBarabasi.jpg'><br/>
+<img width=800 src='./cert/sol2man2WithJeffPatton.jpg'><br/>
+<img width=800 src='./cert/sol2man2WithAdamGibson.jpg'><br/>
+<img width=800 src='./cert/sol2man2WithDavidAnderson.jpg'><br/>
+<img width=800 src='./cert/sol2man2WithDonaldReinertson.jpg'><br/>
+<img width=800 src='./cert/sol2man2WithJamesGrenning.jpg'><br/>
+<img width=800 src='./cert/sol2man2WithIvarJacobson.jpg'><br/>
+
 </body>
 </html>
