--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.pdf" frameborder="0"></iframe>
 <iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.pdf" frameborder="0"></iframe><br/>
 
-<img width=800 src='./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.png'><br/>
-<img width=800 src='./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.png'><br/>
+<img src='./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.png'><br/>
+<img src='./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.png'><br/>
 
 <img width=800 src='./cert/CMM-L3.jpg'><br/>
 <img width=800 src='./cert/CMMi-L3.jpg'><br/>
