--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <html>
 <head>
-<title>
+<title>Sol2man2's
 </title>
 </head>
 <body>
-
-<!--
-<iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.pdf" frameborder="0"></iframe>
-<iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.pdf" frameborder="0"></iframe><br/>
--->
 
 <img src='./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.png'><br/>
 <img src='./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.png'><br/>
@@ -23,6 +18,11 @@
 <img width=800 src='./cert/sol2man2WithDonaldReinertson.jpg'><br/>
 <img width=800 src='./cert/sol2man2WithJamesGrenning.jpg'><br/>
 <img width=800 src='./cert/sol2man2WithIvarJacobson.jpg'><br/>
+
+<!--
+<iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.pdf" frameborder="0"></iframe>
+<iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.pdf" frameborder="0"></iframe><br/>
+-->
 
 </body>
 </html>
