--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
 <title>Sol2man2's
 </title>
+  <meta property="og:site_name" content="sol2man2">
+  <meta property="og:url" content="https://sol2man2.github.io/">
+  <meta property="og:title" content="sol2man2">
+  <meta property="og:image" content="https://sol2man2.github.io/pics/nature.song-washington.jpg">
 </head>
 <body>
 
