--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <img width=800 src='./cert/CMM-L3.jpg'><br/>
 <img width=800 src='./cert/CMMi-L3.jpg'><br/>
 
+  
+<img width=800 src='./cert/sol2man2WithBobGalen-sgdub2017.png'><br/>
 <img width=800 src='./cert/sol2man2WithAlbertBarabasi.jpg'><br/>
 <img width=800 src='./cert/sol2man2WithJeffPatton.jpg'><br/>
 <img width=800 src='./cert/sol2man2WithAdamGibson.jpg'><br/>
