--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+<img src='./cert/KeunChang SONG-ScrumAlliance_CSP_Certificate - Letter.png'><br/>
 <img src='./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.png'><br/>
 <img src='./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.png'><br/>
 
