--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <meta property="og:image" content="https://sol2man2.github.io/pics/nature.song-washington.jpg">
 </head>
 <body>
-
-<img src='./cert/KeunChang SONG-ScrumAlliance_CSP_Certificate - Letter.png'><br/>
-<img src='./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.png'><br/>
-<img src='./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.png'><br/>
+<p width="1024">
+<img src="./cert/KeunChang SONG-ScrumAlliance_CSP_Certificate - Letter.png" width="33%">
+<img src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.png" width="33%">
+<img src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.png" width="33%">
+</p>
 
 <img width=800 src='./cert/CMM-L3.jpg'><br/>
 <img width=800 src='./cert/CMMi-L3.jpg'><br/>
