--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
 <img src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.png" width="33%">
 </p>
 
-<img width=800 src='./cert/CMM-L3.jpg'><br/>
-<img width=800 src='./cert/CMMi-L3.jpg'><br/>
+<p width="1024">
+<img width=800 src="./cert/CMM-L3.jpg" width="30%">
+<img width=800 src="./cert/CMMi-L3.jpg" width="30%">
+</p>
 
-  
-<img width=800 src='./cert/sol2man2WithBobGalen-sgdub2017.png'><br/>
-<img width=800 src='./cert/sol2man2WithAlbertBarabasi.jpg'><br/>
-<img width=800 src='./cert/sol2man2WithJeffPatton.jpg'><br/>
-<img width=800 src='./cert/sol2man2WithAdamGibson.jpg'><br/>
-<img width=800 src='./cert/sol2man2WithDavidAnderson.jpg'><br/>
-<img width=800 src='./cert/sol2man2WithDonaldReinertson.jpg'><br/>
-<img width=800 src='./cert/sol2man2WithJamesGrenning.jpg'><br/>
-<img width=800 src='./cert/sol2man2WithIvarJacobson.jpg'><br/>
+<p width="1024">
+<img width=800 src="./cert/sol2man2WithBobGalen-sgdub2017.png">
+<img width=800 src="./cert/sol2man2WithJeffPatton.jpg">
+<img width=800 src="./cert/sol2man2WithDavidAnderson.jpg">
+<img width=800 src="./cert/sol2man2WithDonaldReinertson.jpg">
+<img width=800 src="./cert/sol2man2WithJamesGrenning.jpg">
+<img width=800 src="./cert/sol2man2WithIvarJacobson.jpg">
+</p>
 
-<!--
-<iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.pdf" frameborder="0"></iframe>
-<iframe width=800 height=680 src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.pdf" frameborder="0"></iframe><br/>
--->
+<p width="1024">
+<img width=800 src="./cert/sol2man2WithAlbertBarabasi.jpg">
+<img width=800 src="./cert/sol2man2WithAdamGibson.jpg">
+</p>
 
 </body>
 </html>
