--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 </p>
 
 <p width="1024">
-<img width=800 src="./cert/CMM-L3.jpg" width="50%">
-<img width=800 src="./cert/CMMi-L3.jpg" width="50%">
+<img src="./cert/CMM-L3.jpg" width="50%">
+<img src="./cert/CMMi-L3.jpg" width="50%">
 </p>
 
 <p width="1024">
-<img width=800 src="./cert/sol2man2WithBobGalen-sgdub2017.png">
-<img width=800 src="./cert/sol2man2WithJeffPatton.jpg">
-<img width=800 src="./cert/sol2man2WithDavidAnderson.jpg">
-<img width=800 src="./cert/sol2man2WithDonaldReinertson.jpg">
-<img width=800 src="./cert/sol2man2WithJamesGrenning.jpg">
-<img width=800 src="./cert/sol2man2WithIvarJacobson.jpg">
+<img src="./cert/sol2man2WithBobGalen-sgdub2017.png">
+<img src="./cert/sol2man2WithJeffPatton.jpg">
+<img src="./cert/sol2man2WithDavidAnderson.jpg">
+<img src="./cert/sol2man2WithDonaldReinertson.jpg">
+<img src="./cert/sol2man2WithJamesGrenning.jpg">
+<img src="./cert/sol2man2WithIvarJacobson.jpg">
 </p>
 
 <p width="1024">
-<img width=800 src="./cert/sol2man2WithAlbertBarabasi.jpg">
-<img width=800 src="./cert/sol2man2WithAdamGibson.jpg">
+<img src="./cert/sol2man2WithAlbertBarabasi.jpg">
+<img src="./cert/sol2man2WithAdamGibson.jpg">
 </p>
 
 </body>
