--- a/zumba_songs.html
+++ b/zumba_songs.html
@@ -2,3 +2,20 @@ http://fitnessinstructorsongs.com/my-zumba-playlist-this-week
 https://fitnesswithjennyk.wordpress.com/song-list/
 http://www.zumbawithiida.com/Song-List.html
 https://zumbafitprincess.jimdo.com/song-list/
+
+
+///////////////////////////////////////////
+//  10 songs
+https://www.youtube.com/watch?time_continue=40&v=pD4H6ecTiG0
+https://www.youtube.com/watch?v=6Mgqbai3fKo
+https://www.youtube.com/watch?v=vMHdvd3XEyU
+https://www.youtube.com/watch?v=Xmap94TcDNs
+https://www.youtube.com/watch?v=6BTjG-dhf5s
+https://www.youtube.com/watch?v=DPlcKY7uwmE
+https://www.youtube.com/watch?v=J3Q5lZOep2c
+https://www.youtube.com/watch?v=hsOrZAnQTgc
+https://www.youtube.com/watch?v=bvHttgyDj9E
+https://www.youtube.com/watch?v=xeBmvHG4P1U
+https://www.youtube.com/watch?time_continue=9&v=7uNcQgaQBro
+https://www.youtube.com/watch?v=8HpG0l9cLos
+
