--- a/zumba_songs.html
+++ b/zumba_songs.html
@@ -19,3 +19,6 @@ https://www.youtube.com/watch?v=xeBmvHG4P1U
 https://www.youtube.com/watch?time_continue=9&v=7uNcQgaQBro
 https://www.youtube.com/watch?v=8HpG0l9cLos
 
+///////////////////////////////////////////
+//  zumba songs
+http://lesleyb.zumba.com/music-list
