--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 </p>
 
 <p width="1024">
+<img src="./cert/20180201_agilescrum_besttrainer.jpg" width="49%">
+<img src="./cert/20171208_ActionLearningCoach_sol2man2.jpg" width="49%">
+</p>
+
+<p width="1024">
+<img src="./cert/20171208_LGUP-community_sol2man2.jpg" width="49%">
+<img src="./cert/20171208_Big21-community_sol2man2.jpg" width="49%">
+</p>
+  
+<p width="1024">
 <img src="./cert/CMM-L3.jpg" width="49%">
 <img src="./cert/CMMi-L3.jpg" width="49%">
 </p>
