--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   <meta property="og:image" content="https://sol2man2.github.io/pics/nature.song-washington.jpg">
 </head>
 <body>
+
 <p width="1024">
-<img src="./cert/KeunChang SONG-ScrumAlliance_CSP_Certificate - Letter.png" width="33%">
-<img src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate - Letter.png" width="33%">
-<img src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate - Letter.png" width="33%">
+<img src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate.png" width="33%">
+<img src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate.png" width="33%">
+<img src="./cert/KeunChang SONG-ScrumAlliance_CSD_Certificate.png" width="33%">
+</p>
+
+  <p width="1024">
+<img src="./cert/KeunChang SONG-ScrumAlliance_CSPPO_Certificate.png" width="33%">
+<img src="./cert/KeunChang SONG-ScrumAlliance_CSPSM_Certificate.png" width="33%">
 </p>
 
 <p width="1024">
