--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 
 <p width="1024">
-<img src="./cert/KeunChang SONG-ScrumAlliance_CSPO_Certificate.png" width="33%">
-<img src="./cert/KeunChang SONG-ScrumAlliance_CSM_Certificate.png" width="33%">
-<img src="./cert/KeunChang SONG-ScrumAlliance_CSD_Certificate.png" width="33%">
+<img src="./cert/201706 - KeunChang SONG-ScrumAlliance_CSPO_Certificate.png" width="33%">
+<img src="./cert/201706 - KeunChang SONG-ScrumAlliance_CSM_Certificate.png" width="33%">
+<img src="./cert/201706 - KeunChang SONG-ScrumAlliance_CSD_Certificate.png" width="33%">
 </p>
 
   <p width="1024">
-<img src="./cert/KeunChang SONG-ScrumAlliance_CSPPO_Certificate.png" width="33%">
-<img src="./cert/KeunChang SONG-ScrumAlliance_CSPSM_Certificate.png" width="33%">
+<img src="./cert/201706 - KeunChang SONG-ScrumAlliance_CSPPO_Certificate.png" width="33%">
+<img src="./cert/201706 - KeunChang SONG-ScrumAlliance_CSPSM_Certificate.png" width="33%">
 </p>
 
 <p width="1024">
